--- a/_modules/pyquizhub/core/storage/sql_storage.html
+++ b/_modules/pyquizhub/core/storage/sql_storage.html
@@ -195,16 +195,20 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Fetch all users with statistics.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Fetching all users&quot;</span><span class="p">)</span>
 
-        <span class="c1"># Get all unique user IDs from sessions and results</span>
+        <span class="c1"># Start with all users from users table</span>
         <span class="n">user_ids</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
+        <span class="n">users_query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">users_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">id</span><span class="p">)</span>
+        <span class="n">users_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute</span><span class="p">(</span><span class="n">users_query</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">users_result</span><span class="p">:</span>
+            <span class="n">user_ids</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">row</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;id&quot;</span><span class="p">])</span>
 
-        <span class="c1"># Get user IDs from sessions</span>
+        <span class="c1"># Also get user IDs from sessions</span>
         <span class="n">sessions_query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sessions_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">user_id</span><span class="p">)</span><span class="o">.</span><span class="n">distinct</span><span class="p">()</span>
         <span class="n">sessions_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute</span><span class="p">(</span><span class="n">sessions_query</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">sessions_result</span><span class="p">:</span>
             <span class="n">user_ids</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">row</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;user_id&quot;</span><span class="p">])</span>
 
-        <span class="c1"># Get user IDs from results</span>
+        <span class="c1"># Also get user IDs from results</span>
         <span class="n">results_query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">results_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">user_id</span><span class="p">)</span><span class="o">.</span><span class="n">distinct</span><span class="p">()</span>
         <span class="n">results_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute</span><span class="p">(</span><span class="n">results_query</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">results_result</span><span class="p">:</span>
@@ -240,7 +244,13 @@
     <span class="k">def</span><span class="w"> </span><span class="nf">add_users</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">users</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Add or update users.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Adding users: </span><span class="si">{</span><span class="n">users</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
-        <span class="k">for</span> <span class="n">user_id</span><span class="p">,</span> <span class="n">permissions</span> <span class="ow">in</span> <span class="n">users</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+        <span class="k">for</span> <span class="n">user_id</span><span class="p">,</span> <span class="n">user_data</span> <span class="ow">in</span> <span class="n">users</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+            <span class="c1"># Handle both old format (permissions directly) and new format (dict with permissions key)</span>
+            <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">user_data</span><span class="p">,</span> <span class="nb">dict</span><span class="p">)</span> <span class="ow">and</span> <span class="s2">&quot;permissions&quot;</span> <span class="ow">in</span> <span class="n">user_data</span><span class="p">:</span>
+                <span class="n">permissions</span> <span class="o">=</span> <span class="n">user_data</span><span class="p">[</span><span class="s2">&quot;permissions&quot;</span><span class="p">]</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="n">permissions</span> <span class="o">=</span> <span class="n">user_data</span>
+
             <span class="n">query</span> <span class="o">=</span> <span class="n">insert</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">users_table</span><span class="p">)</span><span class="o">.</span><span class="n">values</span><span class="p">(</span>
                 <span class="nb">id</span><span class="o">=</span><span class="n">user_id</span><span class="p">,</span> <span class="n">permissions</span><span class="o">=</span><span class="n">permissions</span><span class="p">)</span>
             <span class="k">try</span><span class="p">:</span>
@@ -632,14 +642,33 @@
     <span class="k">def</span><span class="w"> </span><span class="nf">get_all_sessions</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Fetch all sessions.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Fetching all sessions&quot;</span><span class="p">)</span>
-        <span class="n">query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sessions_table</span><span class="p">)</span>
-        <span class="n">result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute</span><span class="p">(</span><span class="n">query</span><span class="p">)</span>
         <span class="n">sessions_by_user</span> <span class="o">=</span> <span class="p">{}</span>
+
+        <span class="c1"># Get sessions from results (includes all sessions, active and completed)</span>
+        <span class="n">query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">results_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">user_id</span><span class="p">,</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">results_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">session_id</span>
+        <span class="p">)</span><span class="o">.</span><span class="n">distinct</span><span class="p">()</span>
+        <span class="n">result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute</span><span class="p">(</span><span class="n">query</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">result</span><span class="p">:</span>
             <span class="n">user_id</span> <span class="o">=</span> <span class="n">row</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;user_id&quot;</span><span class="p">]</span>
+            <span class="n">session_id</span> <span class="o">=</span> <span class="n">row</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;session_id&quot;</span><span class="p">]</span>
             <span class="k">if</span> <span class="n">user_id</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">sessions_by_user</span><span class="p">:</span>
                 <span class="n">sessions_by_user</span><span class="p">[</span><span class="n">user_id</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>
-            <span class="n">sessions_by_user</span><span class="p">[</span><span class="n">user_id</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">row</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;session_id&quot;</span><span class="p">])</span>
+            <span class="k">if</span> <span class="n">session_id</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">sessions_by_user</span><span class="p">[</span><span class="n">user_id</span><span class="p">]:</span>
+                <span class="n">sessions_by_user</span><span class="p">[</span><span class="n">user_id</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">session_id</span><span class="p">)</span>
+
+        <span class="c1"># Also get active sessions from sessions table</span>
+        <span class="n">query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sessions_table</span><span class="p">)</span>
+        <span class="n">result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute</span><span class="p">(</span><span class="n">query</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">result</span><span class="p">:</span>
+            <span class="n">user_id</span> <span class="o">=</span> <span class="n">row</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;user_id&quot;</span><span class="p">]</span>
+            <span class="n">session_id</span> <span class="o">=</span> <span class="n">row</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;session_id&quot;</span><span class="p">]</span>
+            <span class="k">if</span> <span class="n">user_id</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">sessions_by_user</span><span class="p">:</span>
+                <span class="n">sessions_by_user</span><span class="p">[</span><span class="n">user_id</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>
+            <span class="k">if</span> <span class="n">session_id</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">sessions_by_user</span><span class="p">[</span><span class="n">user_id</span><span class="p">]:</span>
+                <span class="n">sessions_by_user</span><span class="p">[</span><span class="n">user_id</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">session_id</span><span class="p">)</span>
+
         <span class="k">return</span> <span class="n">sessions_by_user</span></div>
 
 
@@ -698,8 +727,8 @@
             <span class="n">user_id</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;user_id&quot;</span><span class="p">],</span>
             <span class="n">quiz_id</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;quiz_id&quot;</span><span class="p">],</span>
             <span class="n">current_question_id</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;current_question_id&quot;</span><span class="p">],</span>
-            <span class="n">scores</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;scores&quot;</span><span class="p">],</span>
-            <span class="n">answers</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;answers&quot;</span><span class="p">],</span>
+            <span class="n">scores</span><span class="o">=</span><span class="n">session_data</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;scores&quot;</span><span class="p">,</span> <span class="p">{}),</span>
+            <span class="n">answers</span><span class="o">=</span><span class="n">session_data</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;answers&quot;</span><span class="p">,</span> <span class="p">{}),</span>
             <span class="n">completed</span><span class="o">=</span><span class="nb">str</span><span class="p">(</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;completed&quot;</span><span class="p">]),</span>
             <span class="n">created_at</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;created_at&quot;</span><span class="p">],</span>
             <span class="n">updated_at</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;updated_at&quot;</span><span class="p">],</span>
