--- a/_modules/pyquizhub/core/engine/engine.html
+++ b/_modules/pyquizhub/core/engine/engine.html
@@ -157,7 +157,8 @@
             <span class="k">if</span> <span class="n">quiz_data</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;scores&quot;</span><span class="p">)</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="n">quiz_data</span><span class="p">[</span><span class="s2">&quot;scores&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">{}</span>
             <span class="k">for</span> <span class="n">var_name</span><span class="p">,</span> <span class="n">var_config</span> <span class="ow">in</span> <span class="n">quiz_data</span><span class="p">[</span><span class="s2">&quot;variables&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-                <span class="c1"># Initialize all variables with their default values (0 for numeric, &quot;&quot; for string, etc.)</span>
+                <span class="c1"># Initialize all variables with their default values (0 for</span>
+                <span class="c1"># numeric, &quot;&quot; for string, etc.)</span>
                 <span class="n">var_type</span> <span class="o">=</span> <span class="n">var_config</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;type&quot;</span><span class="p">,</span> <span class="s2">&quot;integer&quot;</span><span class="p">)</span>
                 <span class="k">if</span> <span class="n">var_type</span> <span class="o">==</span> <span class="s2">&quot;integer&quot;</span><span class="p">:</span>
                     <span class="n">quiz_data</span><span class="p">[</span><span class="s2">&quot;scores&quot;</span><span class="p">][</span><span class="n">var_name</span><span class="p">]</span> <span class="o">=</span> <span class="mi">0</span>
@@ -222,9 +223,10 @@
         <span class="n">initial_state</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute_api_calls</span><span class="p">(</span>
             <span class="n">initial_state</span><span class="p">,</span>
             <span class="n">RequestTiming</span><span class="o">.</span><span class="n">BEFORE_QUESTION</span><span class="p">,</span>
-            <span class="n">context</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;question_id&quot;</span><span class="p">:</span> <span class="n">first_question_id</span><span class="p">,</span> <span class="o">**</span><span class="n">initial_state</span><span class="p">[</span><span class="s2">&quot;scores&quot;</span><span class="p">]},</span>
-            <span class="n">question_id</span><span class="o">=</span><span class="n">first_question_id</span>
-        <span class="p">)</span>
+            <span class="n">context</span><span class="o">=</span><span class="p">{</span>
+                <span class="s2">&quot;question_id&quot;</span><span class="p">:</span> <span class="n">first_question_id</span><span class="p">,</span>
+                <span class="o">**</span><span class="n">initial_state</span><span class="p">[</span><span class="s2">&quot;scores&quot;</span><span class="p">]},</span>
+            <span class="n">question_id</span><span class="o">=</span><span class="n">first_question_id</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s2">&quot;Created initial quiz state&quot;</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">initial_state</span></div>
@@ -343,7 +345,8 @@
             <span class="p">}</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Eval context: </span><span class="si">{</span><span class="n">eval_context</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">SafeEvaluator</span><span class="o">.</span><span class="n">eval_expr</span><span class="p">(</span><span class="n">condition</span><span class="p">,</span> <span class="n">eval_context</span><span class="p">):</span>
-                <span class="k">for</span> <span class="n">score_key</span><span class="p">,</span> <span class="n">expr</span> <span class="ow">in</span> <span class="n">condition_group</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;update&quot;</span><span class="p">,</span> <span class="p">{})</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+                <span class="k">for</span> <span class="n">score_key</span><span class="p">,</span> <span class="n">expr</span> <span class="ow">in</span> <span class="n">condition_group</span><span class="o">.</span><span class="n">get</span><span class="p">(</span>
+                        <span class="s2">&quot;update&quot;</span><span class="p">,</span> <span class="p">{})</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
                     <span class="n">new_state</span><span class="p">[</span><span class="s2">&quot;scores&quot;</span><span class="p">][</span><span class="n">score_key</span><span class="p">]</span> <span class="o">=</span> <span class="n">SafeEvaluator</span><span class="o">.</span><span class="n">eval_expr</span><span class="p">(</span>
                         <span class="n">expr</span><span class="p">,</span> <span class="p">{</span>
                             <span class="s2">&quot;answer&quot;</span><span class="p">:</span> <span class="n">answer</span><span class="p">,</span>
@@ -461,7 +464,9 @@
             <span class="n">expression</span> <span class="o">=</span> <span class="n">transition</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;expression&quot;</span><span class="p">,</span> <span class="s2">&quot;true&quot;</span><span class="p">)</span>
             <span class="n">next_question_id</span> <span class="o">=</span> <span class="n">transition</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;next_question_id&quot;</span><span class="p">)</span>
             <span class="c1"># Include answer in context for transition expressions</span>
-            <span class="n">context</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;answer&quot;</span><span class="p">:</span> <span class="n">answer</span><span class="p">,</span> <span class="o">**</span><span class="n">scores</span><span class="p">}</span> <span class="k">if</span> <span class="n">answer</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="k">else</span> <span class="n">scores</span>
+            <span class="n">context</span> <span class="o">=</span> <span class="p">{</span>
+                <span class="s2">&quot;answer&quot;</span><span class="p">:</span> <span class="n">answer</span><span class="p">,</span>
+                <span class="o">**</span><span class="n">scores</span><span class="p">}</span> <span class="k">if</span> <span class="n">answer</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="k">else</span> <span class="n">scores</span>
             <span class="k">if</span> <span class="n">SafeEvaluator</span><span class="o">.</span><span class="n">eval_expr</span><span class="p">(</span><span class="n">expression</span><span class="p">,</span> <span class="n">context</span><span class="p">):</span>
                 <span class="k">return</span> <span class="n">next_question_id</span>
         <span class="k">return</span> <span class="kc">None</span></div>
@@ -550,7 +555,8 @@
 
 <div class="viewcode-block" id="QuizEngine._apply_question_templating">
 <a class="viewcode-back" href="../../../../core/engine.html#pyquizhub.core.engine.engine.QuizEngine._apply_question_templating">[docs]</a>
-    <span class="k">def</span><span class="w"> </span><span class="nf">_apply_question_templating</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">question</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span> <span class="n">state</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">_apply_question_templating</span><span class="p">(</span>
+            <span class="bp">self</span><span class="p">,</span> <span class="n">question</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span> <span class="n">state</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Apply templating to question text by replacing placeholders.</span>
 
@@ -581,7 +587,8 @@
         <span class="n">api_placeholders</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">findall</span><span class="p">(</span><span class="sa">r</span><span class="s1">&#39;\{api\.([^}]+)\}&#39;</span><span class="p">,</span> <span class="n">question_text</span><span class="p">)</span>
 
         <span class="k">for</span> <span class="n">placeholder</span> <span class="ow">in</span> <span class="n">api_placeholders</span><span class="p">:</span>
-            <span class="c1"># Split the placeholder into parts (e.g., &quot;joke_api.setup&quot; -&gt; [&quot;joke_api&quot;, &quot;setup&quot;])</span>
+            <span class="c1"># Split the placeholder into parts (e.g., &quot;joke_api.setup&quot; -&gt;</span>
+            <span class="c1"># [&quot;joke_api&quot;, &quot;setup&quot;])</span>
             <span class="n">parts</span> <span class="o">=</span> <span class="n">placeholder</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;.&#39;</span><span class="p">)</span>
             <span class="n">api_id</span> <span class="o">=</span> <span class="n">parts</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
 
@@ -599,9 +606,11 @@
                     <span class="sa">f</span><span class="s2">&quot;</span><span class="se">{{</span><span class="s2">api.</span><span class="si">{</span><span class="n">placeholder</span><span class="si">}</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">,</span>
                     <span class="nb">str</span><span class="p">(</span><span class="n">value</span><span class="p">)</span>
                 <span class="p">)</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Replaced </span><span class="se">{{</span><span class="s2">api.</span><span class="si">{</span><span class="n">placeholder</span><span class="si">}</span><span class="se">}}</span><span class="s2"> with </span><span class="si">{</span><span class="n">value</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
+                    <span class="sa">f</span><span class="s2">&quot;Replaced </span><span class="se">{{</span><span class="s2">api.</span><span class="si">{</span><span class="n">placeholder</span><span class="si">}</span><span class="se">}}</span><span class="s2"> with </span><span class="si">{</span><span class="n">value</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Could not resolve placeholder </span><span class="se">{{</span><span class="s2">api.</span><span class="si">{</span><span class="n">placeholder</span><span class="si">}</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">)</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span>
+                    <span class="sa">f</span><span class="s2">&quot;Could not resolve placeholder </span><span class="se">{{</span><span class="s2">api.</span><span class="si">{</span><span class="n">placeholder</span><span class="si">}</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">)</span>
 
         <span class="c1"># Find and replace {variables.var_name} placeholders</span>
         <span class="n">var_placeholders</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">findall</span><span class="p">(</span><span class="sa">r</span><span class="s1">&#39;\{variables\.([^}]+)\}&#39;</span><span class="p">,</span> <span class="n">question_text</span><span class="p">)</span>
@@ -617,9 +626,11 @@
                     <span class="sa">f</span><span class="s2">&quot;</span><span class="se">{{</span><span class="s2">variables.</span><span class="si">{</span><span class="n">var_name</span><span class="si">}</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">,</span>
                     <span class="nb">str</span><span class="p">(</span><span class="n">value</span><span class="p">)</span>
                 <span class="p">)</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Replaced </span><span class="se">{{</span><span class="s2">variables.</span><span class="si">{</span><span class="n">var_name</span><span class="si">}</span><span class="se">}}</span><span class="s2"> with </span><span class="si">{</span><span class="n">value</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
+                    <span class="sa">f</span><span class="s2">&quot;Replaced </span><span class="se">{{</span><span class="s2">variables.</span><span class="si">{</span><span class="n">var_name</span><span class="si">}</span><span class="se">}}</span><span class="s2"> with </span><span class="si">{</span><span class="n">value</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Could not resolve variable placeholder </span><span class="se">{{</span><span class="s2">variables.</span><span class="si">{</span><span class="n">var_name</span><span class="si">}</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">)</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span>
+                    <span class="sa">f</span><span class="s2">&quot;Could not resolve variable placeholder </span><span class="se">{{</span><span class="s2">variables.</span><span class="si">{</span><span class="n">var_name</span><span class="si">}</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">)</span>
 
         <span class="k">return</span> <span class="n">templated_question</span></div>
 </div>
