--- a/_modules/pyquizhub/core/storage/file_storage.html
+++ b/_modules/pyquizhub/core/storage/file_storage.html
@@ -254,7 +254,8 @@
         <span class="k">for</span> <span class="n">user_id</span> <span class="ow">in</span> <span class="n">user_ids</span><span class="p">:</span>
             <span class="c1"># Get permissions from users.json if they exist</span>
             <span class="n">user_data</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">users</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">user_id</span><span class="p">,</span> <span class="p">{})</span>
-            <span class="c1"># Handle both old format (permissions directly) and new format (dict with permissions key)</span>
+            <span class="c1"># Handle both old format (permissions directly) and new format</span>
+            <span class="c1"># (dict with permissions key)</span>
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">user_data</span><span class="p">,</span> <span class="nb">dict</span><span class="p">)</span> <span class="ow">and</span> <span class="s2">&quot;permissions&quot;</span> <span class="ow">in</span> <span class="n">user_data</span><span class="p">:</span>
                 <span class="n">permissions</span> <span class="o">=</span> <span class="n">user_data</span><span class="p">[</span><span class="s2">&quot;permissions&quot;</span><span class="p">]</span>
             <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">user_data</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
@@ -624,7 +625,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Fetching all sessions grouped by user&quot;</span><span class="p">)</span>
         <span class="n">sessions_by_user</span> <span class="o">=</span> <span class="p">{}</span>
 
-        <span class="c1"># Get sessions from results (includes all sessions, active and completed)</span>
+        <span class="c1"># Get sessions from results (includes all sessions, active and</span>
+        <span class="c1"># completed)</span>
         <span class="k">for</span> <span class="n">user_id</span><span class="p">,</span> <span class="n">user_results</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">results</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="k">for</span> <span class="n">quiz_id</span><span class="p">,</span> <span class="n">quiz_sessions</span> <span class="ow">in</span> <span class="n">user_results</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
                 <span class="k">for</span> <span class="n">session_id</span> <span class="ow">in</span> <span class="n">quiz_sessions</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
