--- a/_modules/pyquizhub/core/storage/sql_storage.html
+++ b/_modules/pyquizhub/core/storage/sql_storage.html
@@ -222,7 +222,8 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">users_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">id</span> <span class="o">==</span> <span class="n">user_id</span>
             <span class="p">)</span>
             <span class="n">permissions_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_execute</span><span class="p">(</span><span class="n">permissions_query</span><span class="p">)</span><span class="o">.</span><span class="n">fetchone</span><span class="p">()</span>
-            <span class="n">permissions</span> <span class="o">=</span> <span class="n">permissions_result</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;permissions&quot;</span><span class="p">]</span> <span class="k">if</span> <span class="n">permissions_result</span> <span class="k">else</span> <span class="p">[]</span>
+            <span class="n">permissions</span> <span class="o">=</span> <span class="n">permissions_result</span><span class="o">.</span><span class="n">_mapping</span><span class="p">[</span><span class="s2">&quot;permissions&quot;</span><span class="p">]</span> <span class="k">if</span> <span class="n">permissions_result</span> <span class="k">else</span> <span class="p">[</span>
+            <span class="p">]</span>
 
             <span class="c1"># Count quizzes taken (unique quiz_ids from results)</span>
             <span class="n">quizzes_query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">results_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">quiz_id</span><span class="p">)</span><span class="o">.</span><span class="n">where</span><span class="p">(</span>
@@ -245,7 +246,8 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Add or update users.&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Adding users: </span><span class="si">{</span><span class="n">users</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">user_id</span><span class="p">,</span> <span class="n">user_data</span> <span class="ow">in</span> <span class="n">users</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="c1"># Handle both old format (permissions directly) and new format (dict with permissions key)</span>
+            <span class="c1"># Handle both old format (permissions directly) and new format</span>
+            <span class="c1"># (dict with permissions key)</span>
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">user_data</span><span class="p">,</span> <span class="nb">dict</span><span class="p">)</span> <span class="ow">and</span> <span class="s2">&quot;permissions&quot;</span> <span class="ow">in</span> <span class="n">user_data</span><span class="p">:</span>
                 <span class="n">permissions</span> <span class="o">=</span> <span class="n">user_data</span><span class="p">[</span><span class="s2">&quot;permissions&quot;</span><span class="p">]</span>
             <span class="k">else</span><span class="p">:</span>
@@ -644,7 +646,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Fetching all sessions&quot;</span><span class="p">)</span>
         <span class="n">sessions_by_user</span> <span class="o">=</span> <span class="p">{}</span>
 
-        <span class="c1"># Get sessions from results (includes all sessions, active and completed)</span>
+        <span class="c1"># Get sessions from results (includes all sessions, active and</span>
+        <span class="c1"># completed)</span>
         <span class="n">query</span> <span class="o">=</span> <span class="n">select</span><span class="p">(</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">results_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">user_id</span><span class="p">,</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">results_table</span><span class="o">.</span><span class="n">c</span><span class="o">.</span><span class="n">session_id</span>
@@ -828,7 +831,8 @@
 <span class="sd">            session_id: Unique session identifier</span>
 <span class="sd">            session_data: Updated session data dictionary</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="c1"># Build update values conditionally depending on whether api_data exists</span>
+        <span class="c1"># Build update values conditionally depending on whether api_data</span>
+        <span class="c1"># exists</span>
         <span class="n">values</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
             <span class="n">user_id</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;user_id&quot;</span><span class="p">],</span>
             <span class="n">quiz_id</span><span class="o">=</span><span class="n">session_data</span><span class="p">[</span><span class="s2">&quot;quiz_id&quot;</span><span class="p">],</span>
