* telegram attachments fix

--- a/pyquizhub/adapters/web/index.html
+++ b/pyquizhub/adapters/web/index.html
@@ -20,7 +20,7 @@
 
         <div id="quiz-screen" style="display: none;">
             <div id="question-image-container" style="display: none; text-align: center; margin-bottom: 20px;">
-                <img id="question-image" src="" alt="Question image" style="max-width: 100%; max-height: 400px; border-radius: 8px;">
+                <!-- Attachment container - populated dynamically by JavaScript -->
             </div>
             <h2 id="question-text"></h2>
             <form id="quiz-form" class="quiz-form">
